# kenlm

./: CMakeLists.txt  MANIFEST.in  README.md  fix_test_paths.sh  pyproject.toml  setup.py
.github/workflows/: mac.yml  regenerate-wrapper.yml  ubuntu.yml  wheels.yml  windows.yml
.pi/: pipowers-state.json
cmake/: KenLMFunctions.cmake  kenlmConfig.cmake.in
docs/superpowers/plans/: 2025-07-23-remove-boost.md
docs/superpowers/specs/: 2025-07-23-remove-boost-design.md
lm/: CMakeLists.txt  binary_format.cc  kenlm_benchmark_main.cc  left_test.cc  model_test.cc  partial_test.cc  search_hashed.cc  search_trie.cc
lm/builder/: CMakeLists.txt  adjust_counts_test.cc  corpus_count.cc  corpus_count_test.cc  count_ngrams_main.cc  debug_print.hh  dump_counts_main.cc  lmplz_main.cc  output.cc  output.hh  pipeline.cc
lm/common/: CMakeLists.txt  model_buffer.cc  model_buffer_test.cc
lm/filter/: arpa_io.hh  count_io.hh  filter_main.cc  format.hh  phrase.hh  phrase_table_vocab_main.cc  thread.hh  vocab.cc  vocab.hh
lm/interpolate/: CMakeLists.txt  backoff_reunification_test.cc  bounded_sequence_encoding_test.cc  interpolate_main.cc  merge_vocab_test.cc  normalize_test.cc  streaming_example_main.cc  tune_derivatives_test.cc  tune_instances.cc  tune_instances.hh  tune_instances_test.cc  tune_weights.cc
lm/wrappers/: nplm.cc  nplm.hh
python/: BuildStandalone.cmake  kenlm.cpp
scripts/: migrate_tests.py
util/: CMakeLists.txt  bit_packing_test.cc  file_piece.cc  file_piece_test.cc  integer_to_string.cc  integer_to_string_test.cc  joint_sort.hh  joint_sort_test.cc  multi_intersection.hh  multi_intersection_test.cc  parallel_read.cc  pcqueue.hh  pcqueue_test.cc  probing_hash_table_benchmark_main.cc  probing_hash_table_test.cc  program_options.hh  range.hh  read_compressed_test.cc  sized_iterator.hh  sized_iterator_test.cc  sorted_uniform_test.cc  string_piece_hash.hh  string_stream_test.cc  test_main.cc  test_main.hh  thread_pool.hh  tokenize_piece.hh  tokenize_piece_test.cc
util/stream/: CMakeLists.txt  chain.cc  chain.hh  io_test.cc  multi_progress.cc  multi_progress.hh  multi_stream.hh  rewindable_stream.cc  rewindable_stream.hh  rewindable_stream_test.cc  sort_test.cc  stream.hh  stream_test.cc
