[build-system]
requires = ["setuptools", "wheel", "cmake>=3.28"]

[project]
name = "kenlm-ex"
version = "0.2.1"
description = "KenLM: Faster and Smaller Language Model Queries"
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Kenneth Heafield" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Text Processing :: Linguistic",
]

[tool.setuptools]
packages = []
